# gl-fiddle

./: CMakeLists.txt  GenVS2026Project.bat
src/: main.cpp
